# gst-arducamsrc

./: .gitignore  .gitmodules  AUTHORS  LICENSE  Makefile.am  Makefile1  README  README.md  configure.ac
src/: Makefile.am  gstarducamsrc.c  gstarducamsrc.h
